--- a/src/components/GamePage/Game.scss
+++ b/src/components/GamePage/Game.scss
@@ -42,6 +42,17 @@
         .play-game {
             @include library.flex-column-center;
             width: 100%;
+
+            input[type="text"] {
+                width: 400px;
+                padding: 20px;
+                opacity: 0.59;
+                outline: none;
+                font-size: 32px;
+                border-radius: 15px;
+                box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.8);
+                background-color: white;
+            }
         }
 
     }
