Add custom dropdown arrow in SignUp select level

--- a/src/components/SignUpPage/SignUp.scss
+++ b/src/components/SignUpPage/SignUp.scss
@@ -4,7 +4,7 @@
     font-size: $font-size;
     padding: $padding;
     margin-bottom: 20px;
-    border-radius: 15px;
+    border-radius: 12px;
     box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.8);
     outline: none;
 }
@@ -64,22 +64,56 @@
                         color: black;          
                     }            
                 }
-        
-                select {
-                   @include form-fields-style(35px, 20px);
-                    border: 1px solid library.$cool-grey-two;
-                    background-color: transparent;
-                    color: library.$cool-grey-two;
-                    
-                    &:invalid {
-                        color: library.$cool-grey-two;
+
+                .select-wrapper {
+                    position: relative;
+
+                    select {
+                        display: flex;
+                        @include form-fields-style(35px, 20px);
+                         border: 1px solid library.$cool-grey-two;
+                         width: 100%;
+                         background-color: transparent;
+                         color: library.$cool-grey-two;
+
+                         -webkit-appearance: none;
+                         -moz-appearance: none;
+                         -ms-appearance: none;
+                         -o-appearance: none;
+                         appearance: none;
+                         
+                         &:invalid {
+                             color: library.$cool-grey-two;
+                         }
+             
+                         option {
+                             color: black;
+                             background-color: library.$cool-grey-two;
+                             font-size: 25px;
+
+                             &:hover::after {
+                                 background-color:#053a45;
+                             }
+                         }
+         
+                     }
+
+                     &:after {
+                        position: absolute;
+                        content: "";
+                        top: 34px;
+                        right: 30px;
+                        width: 0; 
+                        height: 0; 
+                        border-left: 10px solid transparent;
+                        border-right: 10px solid transparent;
+                        border-top: 10px solid;
+                        border-color: #97a4a7 transparent transparent transparent;
                     }
-        
-                    option {
-                        color: black;
-                    }
-    
+
                 }
+        
+                
             }
     
         }
@@ -137,10 +171,33 @@
                     input {
                         @include form-fields-style(20px, 16px)
                     }
-    
-                    select {
-                        @include form-fields-style(20px, 16px )
+
+                    .select-wrapper {
+
+                        select {
+                            @include form-fields-style(20px, 16px );
+
+                            option {
+                                font-size: 16px;
+                            }
+                        }
+
+                        &:after {
+                            position: absolute;
+                            content: "";
+                            top: 24px;
+                            right: 20px;
+                            width: 0;
+                            height: 0;
+                            border-left: 8px solid transparent;
+                            border-right: 8px solid transparent;
+                            border-top: 8px solid;
+                            border-color: #97a4a7 transparent transparent transparent;
+                         }
+
                     }
+    
+                    
                 }
             }
     
