Add error message for name input field

--- a/src/components/SignUpPage/SignUp.scss
+++ b/src/components/SignUpPage/SignUp.scss
@@ -3,7 +3,6 @@
 @mixin form-fields-style($font-size, $padding) {
     font-size: $font-size;
     padding: $padding;
-    margin-bottom: 20px;
     border-radius: 12px;
     box-shadow: 0 3px 16px 0 rgba(0, 0, 0, 0.8);
     outline: none;
@@ -53,11 +52,12 @@
         
                 display: flex;
                 flex-direction: column;
-                margin: 30px 0px 80px 0px;
+                margin: 30px 0 80px 0;
                 
                 input {
                     @include form-fields-style(35px, 20px);
                     border: none;
+                    margin: 0;
                     background-color: library.$cool-grey-two;
         
                     @include placeholder {  
@@ -65,8 +65,17 @@
                     }            
                 }
 
+                .error-message {
+                    text-align: start;
+                    line-height: 0;
+                    margin: 10px;
+                    padding: 4px 0 2px 20px;
+                    font-size: 20px;
+                }
+
                 .select-wrapper {
                     position: relative;
+                    margin-top: 30px;
 
                     select {
                         display: flex;
@@ -126,7 +135,7 @@
             background: transparent;
             border: none;
             outline: none;
-            margin-top: 80px;
+            margin-top: 90px;
             cursor: pointer;
     
             &:hover {
@@ -149,30 +158,36 @@
         .box{
 
             img {
-                width: 160px;
+                width: 120px;
             }
             .title {
-                font-size: 50px;
+                font-size: 40px;
             }
     
             .inner-container {
-                width: 422px;
+                width: 362px;
     
                 .sub-title {
                     
                     p {
-                        font-size: 20px;
+                        font-size: 16px;
                     }
                 }
     
                 form {
-                    margin: 30px 0 30px 0;
+                    margin: 20px 0 30px 0;
     
                     input {
-                        @include form-fields-style(20px, 16px)
+                        @include form-fields-style(18px, 16px)
+                    }
+
+                    .error-message {
+                        font-size: 16px;
+                        padding: 2px 0 1px 10px;
                     }
 
                     .select-wrapper {
+                        margin-top: 20px;
 
                         select {
                             @include form-fields-style(20px, 16px );
@@ -189,9 +204,9 @@
                             right: 20px;
                             width: 0;
                             height: 0;
-                            border-left: 8px solid transparent;
-                            border-right: 8px solid transparent;
-                            border-top: 8px solid;
+                            border-left: 6px solid transparent;
+                            border-right: 6px solid transparent;
+                            border-top: 6px solid;
                             border-color: #97a4a7 transparent transparent transparent;
                          }
 
