--- a/src/components/GamePage/Game.scss
+++ b/src/components/GamePage/Game.scss
@@ -26,10 +26,25 @@
             width: 100%;
             padding: 0px;
 
-            span {
-                font-size: 32px;
+            .time-left {
+                font-size: 48px;
                 color: white;
-                margin-right: 120px;
+                margin: 0 120px 30px 0;
+            }
+
+            .random-word {
+                display: flex;
+                font-size: 48px;
+                color: white;
+                margin: 0 120px 30px 0;
+
+                .green {
+                    color: #54ba18;
+                }
+
+                .blue {
+                    color: #445298;
+                }
             }
 
             p {
