--- a/src/components/GamePage/Game.scss
+++ b/src/components/GamePage/Game.scss
@@ -8,26 +8,18 @@
 
     .game-container {
         display: flex;
-        padding: 40px 20px 20px 20px;
+        padding: 20px 20px 20px 20px;
         justify-content: space-around;
-        flex-grow: 1;
 
         .play-game {
             @include library.flex-column-center;
             width: 100%;
-            padding: 0px;
-
-            .time-left {
-                font-size: 48px;
-                color: white;
-                margin: 0 120px 30px 0;
-            }
 
             .random-word {
                 display: flex;
                 font-size: 48px;
                 color: white;
-                margin: 0 120px 30px 0;
+                margin: 0 180px 30px 0;
 
                 .green {
                     color: #54ba18;
@@ -41,13 +33,13 @@
             p {
                 font-size: 56px;
                 color: white;
-                margin-right: 120px;
+                margin-right: 180px;
             }
 
             input[type="text"] {
                 width: 400px;
-                padding: 10px;
-                margin-right: 120px;
+                padding: 10px 14px 10px 10px;
+                margin-right: 180px;
                 opacity: 0.59;
                 outline: none;
                 font-size: 32px;
@@ -97,6 +89,21 @@
 @media (max-width: 1370px) {
 
     .main {
+
+        .game-container {
+
+            .play-game {
+
+                .random-word {
+                    font-size: 40px;
+                }
+
+                input[type="text"] {
+                    width: 300px;
+                    padding: 8px 12px 8px 8px;
+                }
+            }
+        }
     
         .stop-game-btn {
 
