--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -1,8 +1,9 @@
 
 .base-timer {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
+  margin: 0 180px 20px 0;
 }
 
 .base-timer__svg {
@@ -30,7 +31,7 @@
   color: #ff5155;
 }
 
-/* .base-timer__path-remaining.green {
+.base-timer__path-remaining.green {
   color: rgb(65, 184, 131);
 }
 
@@ -40,15 +41,36 @@
 
 .base-timer__path-remaining.red {
   color: red;
-} */
+}
 
 .base-timer__label {
   position: absolute;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   top: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 48px;
+  font-size: 44px;
+  color: white;
+}
+
+
+@media (max-width: 1370px) {
+  .base-timer {
+    width: 150px;
+    height: 150px;
+  }
+
+  .base-timer__label {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    color: white;
+  }
 }
